# platypus

./: .gitmodules  README.md  setup.cfg  validate.yml
ansible/: ansible.cfg  validate.yml
ansible/callback_plugins/: assertcatcher.py
ansible/roles/check/clock/tasks/: main.yml
ansible/roles/check/diskspace/tasks/: main.yml
ansible/roles/check/updates/tasks/: main.yml
ansible/roles/module/assertive/: README.md
ansible/roles/module/mongo_query/: README.md
bats/openstack/: test_debug_logs.bats  test_tracebacks.bats
bats/system/: systemd_helper.bash  test_clock.bats  test_filesystem.bats
platypus/: main.py
platypus/tests/: conftest.py
platypus/tests/openstack/: test_debug_logs.py
platypus/tests/openstack/ceilometer/: conftest.py  test_mongodb_size.py  test_time_to_live.py
platypus/tests/openstack/cinder/: conftest.py  test_volume_driver.py
platypus/tests/openstack/keystone/: conftest.py  test_token_table.py
platypus/tests/pacemaker/: test_fencing.py
platypus/tests/system/: test_clock.py  test_diskspace.py  test_updates.py
pytest/: requirements.txt
pytest/examples/: ceilometer.conf  cinder.conf  keystone.conf
pytest/platypus/: main.py
pytest/platypus/tests/: conftest.py
pytest/platypus/tests/openstack/: test_debug_logs.py
pytest/platypus/tests/pacemaker/: test_fencing.py
pytest/platypus/tests/system/: test_clock.py  test_diskspace.py  test_updates.py
roles/check/clock/tasks/: main.yml
roles/check/diskspace/tasks/: main.yml
roles/sql_query/: README.md
roles/sql_query/tests/: main.yml
(+32 files in other folders)
