[metadata]
name = platypus
summary = Infrastrcture testing framework
description-file =
    README.md
author = Lars Kellogg-Stedman
author-email = lars@redhat.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    platypus

[entry_points]
console_scripts =
    platypus = platypus.main:main

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true

[flake8]
ignore = E731
